# cd13678-intro-to-rust-starter

./: .gitignore  README.md
.github/workflows/: rust.yml
starter/: Makefile  README.md
starter/c_output/: test_game_exe
starter/c_test_game/: test_game.c
starter/my_game_engine/: Cargo.toml  build.rs  wrapper.h
starter/my_game_engine/src/: ffi.rs  game_ffi.rs  game_macros.rs  lib.rs
starter/opengl_wrapper_lib/: opengl_wrapper_lib.c  opengl_wrapper_lib.h
starter/rust_snake_game/: Cargo.toml
starter/rust_snake_game/src/: game.rs  main.rs  remote.rs
starter/rust_snake_game/src/snake/: mod.rs
starter/rust_test_game/: Cargo.toml
starter/rust_test_game/src/: game.rs  main.rs  remote.rs
starter/rust_test_game/src/snake/: mod.rs
