[package]
name = "rust_test_game"
version = "0.1.0"
edition = "2021"

[dependencies]
my_game_engine = { path = "../my_game_engine"}
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.85"
reqwest = "0.12.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel ="0.5.14"
rand = "0.9.0"